--- a/fullstack-nanodegree-vm/vagrant/final project/templates/edit_menu_item.html
+++ b/fullstack-nanodegree-vm/vagrant/final project/templates/edit_menu_item.html
@@ -2,11 +2,48 @@
 <html>
 	
 	<head>
-		<title></title>
+		<title>Restaurants: {{restaurant.name}}</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
-		
+		<h1>{{restaurant.name}}</h1>
+		<form method='POST' action='{{url_for("edit_menu_item", restaurant_id=restaurant.id, menu_id=item.id)}}'>
+			<input type="text" name="name" placeholder="{{item.name}}"><br>
+			<input type="text" name="description" placeholder="{{item.description}}"><br>
+			<input type="text" name="price" placeholder="{{item.price}}">$<br>
+
+			{% if item.course == 'Appetizer' %}
+				<input type="radio" name="course" value="Appetizer" checked>Appetizer<br>
+			{% else %}
+				<input type="radio" name="course" value="Appetizer">Appetizer<br>
+			{% endif %}
+
+
+			{% if item.course == 'Entree' %}
+				<input type="radio" name="course" value="Entree" checked>Entree<br>
+			{% else %}
+				<input type="radio" name="course" value="Entree">Entree<br>
+			{% endif %}
+
+
+			{% if item.course == 'Dessert' %}
+				<input type="radio" name="course" value="Dessert" checked>Dessert<br>
+			{% else %}
+				<input type="radio" name="course" value="Dessert">Dessert<br>
+			{% endif %}
+
+
+			{% if item.course == 'Beverage' %}
+				<input type="radio" name="course" value="Beverage" checked>Beverage<br>
+			{% else %}
+				<input type="radio" name="course" value="Beverage">Beverage<br>
+			{% endif %}
+
+			<input type="submit" value="Edit"><br>
+			<a href='{{url_for("show_restaurant_with_id", restaurant_id=restaurant.id)}}'>Cancel</a>
+
+		</form>
 	</body>
 
 </html>
