--- a/fullstack-nanodegree-vm/vagrant/final project/templates/new_menu_item.html
+++ b/fullstack-nanodegree-vm/vagrant/final project/templates/new_menu_item.html
@@ -2,11 +2,24 @@
 <html>
 	
 	<head>
-		<title></title>
+		<title>Restaurants: {{restaurant.name}}</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
 		
+		<h1>{{restaurant.name}}</h1>
+		<form method='POST' action='{{url_for("create_menu_item", restaurant_id=restaurant.id)}}'>
+			<input type='text' placeholder='Name' name='name'><br/>
+			<input type='text' placeholder='Description' name='description'><br/>
+			<input type='text' placeholder='Price' name='price'>$<br/>
+			<input type="radio" name="course" value="Appetizer" checked>Appetizer<br>
+			<input type="radio" name="course" value="Entree">Entree<br>
+			<input type="radio" name="course" value="Dessert">Dessert<br>
+			<input type="radio" name="course" value="Beverage">Beverage<br>
+			<input type="submit" value="Create">
+		</form>
+
 	</body>
 
 </html>
