--- a/fullstack-nanodegree-vm/vagrant/final project/templates/new_restaurant.html
+++ b/fullstack-nanodegree-vm/vagrant/final project/templates/new_restaurant.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<title>Create a new restaurant</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
