--- a/fullstack-nanodegree-vm/vagrant/final project/templates/restaurants.html
+++ b/fullstack-nanodegree-vm/vagrant/final project/templates/restaurants.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<title>Restaurants</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 
 	<body>
@@ -10,7 +11,7 @@
 		<a href='{{url_for("create_restaurant")}}'><p>Add new restaurant</p></a>
 		{% for restaurant in restaurants %}
 
-			<div style='border-style: solid;border-color: red;padding: 10px;'>
+			<div>
 				<a href='{{url_for("show_restaurant_with_id", restaurant_id=restaurant.id)}}'><h2>{{restaurant.name}}</h2></a>
 				<a href='{{url_for("edit_restaurant", restaurant_id=restaurant.id)}}'>Edit</a><br/>
 				<a href='{{url_for("delete_restaurant", restaurant_id=restaurant.id)}}'>Delete</a><br/><br/>
